--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ body {
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid #E7E9FC;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -116,16 +117,17 @@ body {
 }
 /* ========================Header===================== */
 /* ==========================Hero==================== */
-
-  
-
 .hero {
   padding-top: 188px;
   padding-bottom: 188px;
   background-color: #2e2f42;
-  /* max-width: 1440px;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-img.jpg);
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   margin-left: auto;
-  margin-right: auto; */
+  margin-right: auto;
 }
 .hero-title {
   color: #fff;
@@ -174,6 +176,17 @@ body {
 .features-list-item {
   flex-basis: calc((100% - 72px)/ 4);
 }
+
+.features-icon-container {
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ height: 112px;
+ background-color: #F4F4FD;
+ border-radius: 4px;
+ margin-bottom: 8px;
+}
+
 .features-list-title {
   color: var(--secondary-color);
   font-size: 20px;
@@ -183,7 +196,7 @@ body {
   margin-bottom: 8px;
 }
 .features-list-description {
-  width: 264px;
+  /* width: 264px; */
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
@@ -191,7 +204,6 @@ body {
 /*====================company philosophy ===========*/
 /* ===================Areas of work =================*/
 .projects {
-  margin-top: 120px;
   padding-bottom: 120px;
 }
 .projects-title {
@@ -232,7 +244,7 @@ body {
   display: flex;
   gap: 24px;
 }
-.team-list-item {
+.team-list-item { 
   background-color: #fff;
   flex-basis: calc((100% - 72px)/ 4);
   border-radius: 0px 0px 4px 4px;
@@ -259,8 +271,78 @@ body {
   line-height: 1.5;
   letter-spacing: 0.32px;
   color: var(--primary-color);
+  margin-bottom: 8px;
+}
+.social-list {
+ display: flex;
+ justify-content: center;
+ gap: 24px;
+}
+.social-icon-item {
+  width: 40px;
+  height: 40px;
+}
+.social-icon-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4D5AE5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social-icon-link:hover,
+.social-icon-link:focus {
+  background-color: #404bbf;
+}
+.social-icon-list {
+ fill: #f4f4fd; 
 }
 /* ===================Team===========================*/
+/*=================== Customers====================== */
+.Customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.Customers-title {
+color: var(--secondary-color);
+text-align: center;
+font-family: Roboto;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.72px;
+margin-bottom: 72px;
+}
+.Customers-list {
+  display: flex;
+  gap: 24px;
+}
+.Customers-list-item {
+ flex-basis: calc((100% - 120px)/ 6);
+ height: 88px;
+}
+.Customers-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #8E8F99;
+}
+.Customers-link:hover,
+.Customers-link:focus {
+  color: #404BBF;
+  border-color: #404BBF;
+}
+.Customers-list-icon {
+  fill: currentColor;
+}
+ 
+/* ===================Customers====================== */
 /*====================== Clients======================= */
 .clients {
   padding-top: 96px;
@@ -333,6 +415,13 @@ letter-spacing: 0.32px;
   padding-top: 100px;
   padding-bottom: 100px;
 }
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+.footer-info {
+  margin-right: 120px;
+}
 .logo-footer {
   display: inline-block;
   margin-bottom: 16px;
@@ -354,5 +443,38 @@ letter-spacing: 0.32px;
   font-family: Roboto;
   line-height: 1.5;
   letter-spacing: 0.32px;
+}
+.social-media-title {
+color: var(--white, #FFF);
+font-family: Roboto;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.32px;
+margin-bottom: 16px;
+}
+.footer-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-list-item {
+width: 40px;
+height: 40px;
+}
+.footer-list-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: #4D5AE5;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+.footer-list-link:hover,
+.footer-list-link:focus {
+ background-color: #31D0AA; 
+}
+.footer-list-icon {
+  fill: #F4F4FD;
 }
 /* ===================Footer========================== */
