--- a/css/styles.css
+++ b/css/styles.css
@@ -370,14 +370,24 @@ margin-bottom: 72px;
   letter-spacing: 0.64px;
   background-color: #F4F4FD;
   border-radius: 4px;
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
   align-items: flex-start;
 } 
+.clients-filter-btn:hover,
+.clients-filter-btn:focus {
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
+}
 .clients-list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+}
+.clients-list-link {
+  display: block;
+}
+ .clients-list-link:hover,
+ .clients-list-link:focus {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .clients-list-item {
   flex-basis: calc((100% - 48px)/ 3);
